// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartDonut Component get data error 1`] = `
<div>
  <h2
    class="sc-gsDKAQ ioZYxa"
  >
    Error: Network Error
  </h2>
</div>
`;

exports[`ChartDonut Component get data success 1`] = `
<div>
  <div
    class="sc-bdvvtL kMtMrD"
  >
    <canvas
      height="150"
      role="img"
      width="300"
    />
  </div>
</div>
`;

exports[`ChartDonut Component loading data 1`] = `
<div>
  <div
    class="sc-dkPtRN cGIPeC"
  >
    <div
      class="spinner-border"
    />
  </div>
</div>
`;
